[gd_scene load_steps=20 format=3 uid="uid://csm2v3r8snq0n"]

[ext_resource type="Script" uid="uid://dwa5au5h5fvdm" path="res://Enemys/Scripts/speer_fish.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b8ko8g5qh3tiu" path="res://Enemys/CanvasTextures/speer_fish.tres" id="2_2ohtj"]
[ext_resource type="Texture2D" uid="uid://dwwle4x8inb1g" path="res://GuiElements/Textures/die.png" id="3_2pd8k"]
[ext_resource type="PackedScene" uid="uid://8wj04cl43dvv" path="res://Scenes/lava_water_detector.tscn" id="7_m3kvb"]
[ext_resource type="PackedScene" uid="uid://cd44bc5ro42ae" path="res://Scenes/health_component.tscn" id="8_ktq6o"]
[ext_resource type="PackedScene" uid="uid://h34illvwh1cv" path="res://Enemys/Scenes/reset_component.tscn" id="9_dconr"]
[ext_resource type="PackedScene" uid="uid://ba7svta3vvg05" path="res://Scenes/hurtbox_component.tscn" id="9_soqpa"]
[ext_resource type="PackedScene" uid="uid://bn0vo2ep18048" path="res://Scenes/hitbox_component.tscn" id="10_7mhxu"]
[ext_resource type="PackedScene" uid="uid://bdxpuixmp63w0" path="res://Scenes/player_detector_component.tscn" id="11_5fxld"]

[sub_resource type="AtlasTexture" id="AtlasTexture_86bko"]
atlas = ExtResource("3_2pd8k")
region = Rect2(0, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_4luj3"]
atlas = ExtResource("3_2pd8k")
region = Rect2(15, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0qgk"]
atlas = ExtResource("3_2pd8k")
region = Rect2(30, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_16c0u"]
atlas = ExtResource("3_2pd8k")
region = Rect2(45, 0, 14, 14)

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2ohtj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86bko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4luj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0qgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16c0u")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 5.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ts256"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_868ff"]
radius = 8.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8ft63"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_22sra"]
radius = 185.779

[node name="SpeerFish" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1")

[node name="SpeerFish" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("1")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.5)
rotation = 1.5708
shape = SubResource("2")

[node name="wait_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="move_dur_timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="LavaWater_Detector" parent="." instance=ExtResource("7_m3kvb")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaWater_Detector"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_ts256")

[node name="healthComponent" parent="." instance=ExtResource("8_ktq6o")]

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("9_soqpa")]
visible = false
collision_layer = 4
health = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(2, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_868ff")

[node name="Hitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("10_7mhxu")]
visible = false
collision_mask = 2
health = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_8ft63")

[node name="PlayerDetector" parent="." instance=ExtResource("11_5fxld")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_22sra")

[node name="EnemyResetComponent" parent="." node_paths=PackedStringArray("collisions", "healthComp") instance=ExtResource("9_dconr")]
collisions = [NodePath("../CollisionShape2D"), NodePath("../LavaWater_Detector/CollisionShape2D"), NodePath("../Hurtbox/CollisionShape2D"), NodePath("../Hitbox/CollisionShape2D"), NodePath("../PlayerDetector/CollisionShape2D")]
healthComp = NodePath("../healthComponent")
physics_process = true

[connection signal="animation_finished" from="SpeerFish" to="." method="_on_SpeerFish_animation_finished"]
[connection signal="timeout" from="wait_timer" to="." method="_on_wait_time_timeout"]
[connection signal="timeout" from="move_dur_timer" to="." method="_on_move_duration_timeout"]
